test/libsolidity/syntaxTests/inlineAssembly/storage_reference_empty_slot.sol
contract C {
    function f() public pure {
        assembly {
            let x := .slot
        }
    }
}
// ----
// ParserError 1856: (84-85): Literal or identifier expected.
